--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= full_title yield :title %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+<title><%= full_title yield :title %></title>
+<%= csrf_meta_tags %>
+<%= stylesheet_link_tag "application", media: "all","data-turbolinks-track": "reload" %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <body>
-    <%= yield %>
-  </body>
+</head>
+<body>
+<%= render "layouts/header" %>
+<div class="container">
+<%= yield %>
+</div>
+</body>
 </html>
