--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,13 +5,16 @@
       <section class="user_info">
         <%= render "shared/user_info" %>
       </section>
+      <section class="stats">
+        <%= render "shared/stats" %>
+      </section>
       <section class="micropost_form">
         <%= render "shared/micropost_form" %>
       </section>
     </aside>
     <div class="col-md-8">
       <h3><%= t ".mf" %></h3>
-      <%= render 'shared/feed' %>
+      <%= render "shared/feed" %>
     </div>
   </div>
 <% else %>
